--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "multer": "*",
     "mysql": "^2.18.1",
     "nodemon": "^3.0.1",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "uuid": "^3.4.0"
   }
 }
